fix spacing issues

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -17,7 +17,6 @@
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
-    text-align: center;
 
     display: inline-block;
     position: relative;
@@ -50,6 +49,7 @@
     height: 80px;
     border-top: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD;
+    text-align: center;
 }
 
 .info-item {
@@ -60,9 +60,35 @@
     text-align: center;
 }
 
-.info-item div {
+.info-item-sub {
+    width: 100px; 
+
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
     left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.info-icon {
+    height: 50px;
+}
+
+.info-icon-group {
+    background: url(../images/icon_group.png) center no-repeat;
+}
+
+.info-icon-bed {
+    background: url(../images/icon_bed.png) center no-repeat;
+}
+
+.info-icon-bath {
+    background: url(../images/icon_bath.png) center no-repeat;
+}
+
+.user {
+    text-align: left;
+}
+
+.description {
+    text-align: left;
 }
